# spurdo-as-a-service

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
spurdo_as_a_service/: __init__.py
spurdo_as_a_service/static/css/: spurdo.css
spurdo_as_a_service/templates/: index.html
tests/: __init__.py  test_spurdo_as_a_service.py
