[tool.poetry]
name = "spurdo-as-a-service"
version = "0.1.0"
description = ""
authors = ["Lee Watson <rev@revthefox.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = { version = "^20.0", extras = ["gevent"] }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
